@@ -1,3 +1,4 @@
 v0.1.0 - January 19, 2021
 First Version
     * Can connect to servers and send byte sequences
+    * Has macros system
